lab-subsetting-and-descriptive-stats

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "Newark       New Jersey    20.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "Buffalo  New York     3.333333"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "Newark     New Jersey    20.000000"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "Hartford  Connecticut    17.222222"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "Ana            HR    Master      F         VP      8      70"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
       " 4   Years       9 non-null      int64 \n",
       " 5   Salary      9 non-null      int64 \n",
       "dtypes: int64(2), object(4)\n",
-      "memory usage: 804.0+ bytes\n"
+      "memory usage: 504.0+ bytes\n"
      ]
     }
    ],
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "array([[<AxesSubplot:title={'center':'Salary'}>]], dtype=object)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
        "array([[<AxesSubplot:title={'center':'Years'}>]], dtype=object)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "48.888888888888886"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "70"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "30"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "Name: David, dtype: object"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
        "30"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,33 +1034,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Years</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Samuel</th>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>M</td>\n",
+       "      <td>associate</td>\n",
+       "      <td>3</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eva</th>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>F</td>\n",
+       "      <td>associate</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pedro</th>\n",
+       "      <td>IT</td>\n",
+       "      <td>Phd</td>\n",
+       "      <td>M</td>\n",
+       "      <td>associate</td>\n",
+       "      <td>7</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Name\n",
-       "Jose        analyst\n",
-       "Maria       analyst\n",
-       "David       analyst\n",
-       "Sonia       analyst\n",
-       "Samuel    associate\n",
-       "Eva       associate\n",
-       "Carlos           VP\n",
-       "Pedro     associate\n",
-       "Ana              VP\n",
-       "Name: Title, dtype: object"
+       "       Department Education Gender      Title  Years  Salary\n",
+       "Name                                                        \n",
+       "Samuel      Sales    Master      M  associate      3      55\n",
+       "Eva         Sales  Bachelor      F  associate      2      55\n",
+       "Pedro          IT       Phd      M  associate      7      60"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your answer here\n",
-    "ti = employee.Title\n",
+    "ti = employee[employee.Title == \"associate\"]\n",
     "ti"
    ]
   },
